--- a/website/index.html
+++ b/website/index.html
@@ -7,21 +7,26 @@
     <link rel="stylesheet" href="src/css/main.css">
 </head>
 <body>
-    <header class="head">
+    <header>
         <div>
-            <img class="logo-img" src="src/" alt="logo">
+            <div>
+                <img class="logo-img" src="src/" alt="logo">
+            </div>
+            <nav>
+                <a href="#main">Main</a>
+                <a href="#about">About</a>
+                <a href="#download">Download</a>
+                <a href="#howtouse">How to use</a>
+                <a href="#contacts">Contacts</a>
+            </nav>
         </div>
-        <nav>
-            <a href="#main">Main</a>
-            <a href="#about">About</a>
-            <a href="#download">Download</a>
-            <a href="#howtouse">How to use</a>
-            <a href="#contacts">Contacts</a>
-        </nav>
+        <div class="colors">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ex ratione aliquam saepe exercitationem! Soluta reprehenderit, obcaecati consectetur perspiciatis quisquam suscipit dignissimos, dolor, quis rerum corporis dolores architecto inventore nobis!</p>
+        </div>
     </header>
     <div id="main" class="hero-container">
         <div>
-            <img src="src/images/Background.jpg" alt="cloud"> 
+            <img src="src/images/posterGradient.jpg" alt="cloud"> 
         </div>
         <div class="hero-text">
             <h1>Movora</h1>
