--- a/website/index.html
+++ b/website/index.html
@@ -8,20 +8,24 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="navigation-container">
             <div>
-                <img class="logo-img" src="src/" alt="logo">
+                <img src="src/images/logo-clear.png" alt="logo"  class="logo">
             </div>
             <nav>
-                <a href="#main">Main</a>
-                <a href="#about">About</a>
-                <a href="#download">Download</a>
-                <a href="#howtouse">How to use</a>
-                <a href="#contacts">Contacts</a>
+                <div><a href="#main">Main</a></div>
+                <div><a href="#about">About</a></div>
+                <div><a href="#howtouse">How to use</a></div>
+                <div><a href="#contacts">Contacts</a></div>
+                <div><a href="#download" class="download-button">Download</a></div>
             </nav>
         </div>
         <div class="colors">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ex ratione aliquam saepe exercitationem! Soluta reprehenderit, obcaecati consectetur perspiciatis quisquam suscipit dignissimos, dolor, quis rerum corporis dolores architecto inventore nobis!</p>
+            <div class="color-5" style="background-color: #984033;"> </div>
+            <div class="color-4" style="background-color: #8E2A48;"> </div>
+            <div class="color-3" style="background-color: #7D1236;"> </div>
+            <div class="color-2" style="background-color: #642067;"> </div>
+            <div class="color-1" style="background-color: #4A124E;"> </div>
         </div>
     </header>
     <div id="main" class="hero-container">
@@ -35,7 +39,50 @@
         </div>
     </div>
     <div id="about" class="about-page">
-        <!--TODO: About-->
+        <div class="card-container">
+            <div class="card-content">
+                <div class="card-colors">
+                        <div class="color-5" style="background-color: #984033;"></div>
+                        <div class="color-3" style="background-color: #7D1236;"></div>
+                        <div class="color-1" style="background-color: #4A124E;"></div>
+                </div>
+                <div class="card-info">
+                    <div><img src="src/images/logo.png" alt="pictogram"></div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque officiis cum nesciunt. Necessitatibus inventore, sed esse porro similique, quaerat sint voluptatem eius debitis, iusto cupiditate minima quibusdam nisi recusandae fugit!</p>
+                    </div>
+                    <div><img src="src/images/poster.jpg" alt="example"></div>
+                </div>
+            </div>
+            <div class="card-content">
+                <div class="card-colors">
+                        <div class="color-5" style="background-color: #984033;"></div>
+                        <div class="color-3" style="background-color: #7D1236;"></div>
+                        <div class="color-1" style="background-color: #4A124E;"></div>
+                </div>
+                <div class="card-info">
+                    <div><img src="src/images/logo.png" alt="pictogram"></div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque officiis cum nesciunt. Necessitatibus inventore, sed esse porro similique, quaerat sint voluptatem eius debitis, iusto cupiditate minima quibusdam nisi recusandae fugit!</p>
+                    </div>
+                    <div><img src="src/images/poster.jpg" alt="example"></div>
+                </div>
+            </div>
+            <div class="card-content">
+                <div class="card-colors">
+                        <div class="color-5" style="background-color: #984033;"></div>
+                        <div class="color-3" style="background-color: #7D1236;"></div>
+                        <div class="color-1" style="background-color: #4A124E;"></div>
+                </div>
+                <div class="card-info">
+                    <div><img src="src/images/logo.png" alt="pictogram"></div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque officiis cum nesciunt. Necessitatibus inventore, sed esse porro similique, quaerat sint voluptatem eius debitis, iusto cupiditate minima quibusdam nisi recusandae fugit!</p>
+                    </div>
+                    <div><img src="src/images/poster.jpg" alt="example"></div>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="download" class="download-page">
         <!--TODO: Download-->
@@ -47,4 +94,14 @@
         <p>&copy; 2025 Nils Terentjevs. All rights reserved.</p>
     </footer>
 </body>
+
+
+<!--
+                    __
+         .,-;-;-,. /'U\
+       _/_/_/_|_\_\) /
+     '-<_><_><_><_>=/\
+       `/_/====/_/-'\_\
+        ""     ""    "" 
+-->
 </html>
