Changes to the website

--- a/website/index.html
+++ b/website/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clouds</title>
+    <title>Movora</title>
     <link rel="stylesheet" href="src/css/main.css">
 </head>
 <body>
@@ -39,16 +39,18 @@
         </div>
     </div>
     <div id="about" class="about-page">
+        <div class="bar" style="background-color: black; width: 100%; height: 40px; margin-bottom: 10%;">p</div>
         <div class="card-container">
             <div class="card-content">
                 <div class="card-colors">
-                        <div class="color-5" style="background-color: #984033;"></div>
-                        <div class="color-3" style="background-color: #7D1236;"></div>
-                        <div class="color-1" style="background-color: #4A124E;"></div>
+                    <div class="color-5" style="background-color: #984033; border: #984033; border-radius: 5px 0px 0px 0px;"></div>
+                    <div class="color-3" style="background-color: #7D1236;"></div>
+                    <div class="color-1" style="background-color: #4A124E; border: #4A124E; border-radius: 0px 0px 0px 5px;"></div>
                 </div>
                 <div class="card-info">
-                    <div><img src="src/images/logo.png" alt="pictogram"></div>
+                    <div><img src="src/images/logo-clear.png" alt="pictogram"></div>
                     <div>
+                        <h2>Lorem</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque officiis cum nesciunt. Necessitatibus inventore, sed esse porro similique, quaerat sint voluptatem eius debitis, iusto cupiditate minima quibusdam nisi recusandae fugit!</p>
                     </div>
                     <div><img src="src/images/poster.jpg" alt="example"></div>
@@ -56,13 +58,14 @@
             </div>
             <div class="card-content">
                 <div class="card-colors">
-                        <div class="color-5" style="background-color: #984033;"></div>
-                        <div class="color-3" style="background-color: #7D1236;"></div>
-                        <div class="color-1" style="background-color: #4A124E;"></div>
+                    <div class="color-5" style="background-color: #984033; border: #984033; border-radius: 5px 0px 0px 0px;"></div>
+                    <div class="color-3" style="background-color: #7D1236;"></div>
+                    <div class="color-1" style="background-color: #4A124E; border: #4A124E; border-radius: 0px 0px 0px 5px;"></div>
                 </div>
                 <div class="card-info">
-                    <div><img src="src/images/logo.png" alt="pictogram"></div>
+                    <div><img src="src/images/logo-clear.png" alt="pictogram"></div>
                     <div>
+                        <h2>Lorem</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque officiis cum nesciunt. Necessitatibus inventore, sed esse porro similique, quaerat sint voluptatem eius debitis, iusto cupiditate minima quibusdam nisi recusandae fugit!</p>
                     </div>
                     <div><img src="src/images/poster.jpg" alt="example"></div>
@@ -70,13 +73,14 @@
             </div>
             <div class="card-content">
                 <div class="card-colors">
-                        <div class="color-5" style="background-color: #984033;"></div>
-                        <div class="color-3" style="background-color: #7D1236;"></div>
-                        <div class="color-1" style="background-color: #4A124E;"></div>
+                    <div class="color-5" style="background-color: #984033; border: #984033; border-radius: 5px 0px 0px 0px;"></div>
+                    <div class="color-3" style="background-color: #7D1236;"></div>
+                    <div class="color-1" style="background-color: #4A124E; border: #4A124E; border-radius: 0px 0px 0px 5px;"></div>
                 </div>
                 <div class="card-info">
-                    <div><img src="src/images/logo.png" alt="pictogram"></div>
+                    <div><img src="src/images/logo-clear.png" alt="pictogram"></div>
                     <div>
+                        <h2>Lorem</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque officiis cum nesciunt. Necessitatibus inventore, sed esse porro similique, quaerat sint voluptatem eius debitis, iusto cupiditate minima quibusdam nisi recusandae fugit!</p>
                     </div>
                     <div><img src="src/images/poster.jpg" alt="example"></div>
