--- a/website/index.html
+++ b/website/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <div id="about" class="about-page">
-        <div class="bar" style="background-color: black; width: 100%; height: 40px; margin-bottom: 10%;">p</div>
+        <div class="bar" style="background-color: black; width: 100%; height: 2em; margin-bottom: 10%;">p</div>
         <div class="card-container">
             <div class="card-content">
                 <div class="card-colors">
@@ -48,12 +48,12 @@
                     <div class="color-1" style="background-color: #4A124E; border: #4A124E; border-radius: 0px 0px 0px 5px;"></div>
                 </div>
                 <div class="card-info">
-                    <div><img src="src/images/logo-clear.png" alt="pictogram"></div>
+                    <div><img class="pictogram" src="src/images/logo-clear.png" alt="pictogram"></div>
                     <div>
                         <h2>Lorem</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque officiis cum nesciunt. Necessitatibus inventore, sed esse porro similique, quaerat sint voluptatem eius debitis, iusto cupiditate minima quibusdam nisi recusandae fugit!</p>
                     </div>
-                    <div><img src="src/images/poster.jpg" alt="example"></div>
+                    <div><img class="poster" src="src/images/poster.jpg" alt="example"></div>
                 </div>
             </div>
             <div class="card-content">
@@ -71,7 +71,7 @@
                     <div><img src="src/images/poster.jpg" alt="example"></div>
                 </div>
             </div>
-            <div class="card-content">
+            <div class="card-content last-card">
                 <div class="card-colors">
                     <div class="color-5" style="background-color: #984033; border: #984033; border-radius: 5px 0px 0px 0px;"></div>
                     <div class="color-3" style="background-color: #7D1236;"></div>
@@ -88,9 +88,21 @@
             </div>
         </div>
     </div>
-    <div id="download" class="download-page">
-        <!--TODO: Download-->
-    </div>
+    <div class="bar" style="background-color: black; width: 100%; height: 2em;"></div>
+    <div class="download-section">
+        <div class="download-content">
+          <p class="download-text">Get the latest version of our software below:</p>
+          <div class="button-group">
+            <a href="#" class="btn primary">Download</a>
+            <a href="#" class="btn secondary small">Download Manual</a>
+          </div>
+          <div class="photo-row">
+            <img src="src/images/Background.jpg" alt="Screenshot 1">
+            <img src="src/images/Background.jpg" alt="Screenshot 2">
+            <img src="src/images/Background.jpg" alt="Screenshot 3">
+          </div>
+        </div>
+      </div>
     <div id="howtouse" class="howToUse-page">
         <!--TODO: How to use-->
     </div>
