--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,12 +64,12 @@
                         style="background-color: #4A124E; border: #4A124E; border-radius: 0px 0px 0px 5px;"></div>
                 </div>
                 <div class="card-info">
-                    <div><img class="pictogram" src="src/images/logo-clear.png" alt="pictogram"></div>
+                    <div><img class="pictogram" src="src/images/fast.png" alt="pictogram"></div>
                     <div>
-                        <h2>Lorem</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque officiis cum nesciunt.
-                            Necessitatibus inventore, sed esse porro similique, quaerat sint voluptatem eius debitis,
-                            iusto cupiditate minima quibusdam nisi recusandae fugit!</p>
+                        <h2>Fast and Reliable</h2>
+                        <p>Our program makes organizing your movie collection easy and efficient. It quickly sorts your
+                            movies with accuracy, saving you time and effort. No complicated setup—just a simple and
+                            reliable way to keep everything in order.</p>
                     </div>
                     <div><img class="poster" src="src/images/poster.jpg" alt="example"></div>
                 </div>
@@ -83,12 +83,12 @@
                         style="background-color: #4A124E; border: #4A124E; border-radius: 0px 0px 0px 5px;"></div>
                 </div>
                 <div class="card-info">
-                    <div><img src="src/images/logo-clear.png" alt="pictogram"></div>
+                    <div><img class="pictogram" src="src/images/lcok.png" alt="pictogram"></div>
                     <div>
-                        <h2>Lorem</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque officiis cum nesciunt.
-                            Necessitatibus inventore, sed esse porro similique, quaerat sint voluptatem eius debitis,
-                            iusto cupiditate minima quibusdam nisi recusandae fugit!</p>
+                        <h2>Secure</h2>
+                        <p>Your movie collection stays protected with our reliable and secure program. We prioritize
+                            your privacy while keeping everything organized and easy to manage. Sort with confidence,
+                            knowing your data is safe.</p>
                     </div>
                     <div><img src="src/images/poster.jpg" alt="example"></div>
                 </div>
@@ -102,12 +102,12 @@
                         style="background-color: #4A124E; border: #4A124E; border-radius: 0px 0px 0px 5px;"></div>
                 </div>
                 <div class="card-info">
-                    <div><img src="src/images/logo-clear.png" alt="pictogram"></div>
+                    <div><img class="pictogram" src="src/images/easy.png" alt="pictogram"></div>
                     <div>
-                        <h2>Lorem</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque officiis cum nesciunt.
-                            Necessitatibus inventore, sed esse porro similique, quaerat sint voluptatem eius debitis,
-                            iusto cupiditate minima quibusdam nisi recusandae fugit!</p>
+                        <h2>Easy to use</h2>
+                        <p>No complicated steps—just a straightforward way to organize your movies. Our program is
+                            designed to be intuitive and hassle-free, so you can sort your collection in just a few
+                            clicks.</p>
                     </div>
                     <div><img src="src/images/poster.jpg" alt="example"></div>
                 </div>
@@ -129,21 +129,61 @@
             </div>
         </div>
     </div>
-    <div id="howtouse" class="howToUse-page">
-        <!--TODO: How to use-->
+    <div class="how-to">
+        <div class="how-to-main">
+            <div class="how-to-text">
+                <h2>How to use Movora?</h2>
+                <p>You can easily access our manual by downloading it for a quick and easy start to your film sorting!
+                </p>
+                <p>Our manual provides comprehensive instructions on all the essential details you need to know before
+                    using our software. This ensures a smooth experience, but should any issues arise, feel free to
+                    contact us!</p>
+            </div>
+            <div class="how-to-btn">
+                <a href="#" class="btn primary">Download Manual</a>
+            </div>
+        </div>
+        <div class="video">
+            <iframe width="801" height="451" src="https://www.youtube.com/embed/etOq30rF0gE?si=ogd8_2kUn3QcGdeU"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pictur
+                e-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
     </div>
     <footer>
-        <p>&copy; 2025 Nils Terentjevs. All rights reserved.</p>
+        <div class="upper-footer">
+            <div class="contacts-footer">
+                <h2>Contact us</h2>
+                <p>movora@gmail.com</p>
+                <p>www.movora.com/github.net</p>
+                <p>+371 24 814 545</p>
+                <p>Latvia, Riga</p>
+            </div>
+            <div class="menu-footer">
+                <div>
+                    <a href="#main">Main</a>
+                    <a href="#about">About</a>
+                    <a href=" #howtouse">How to use</a>
+                    <a href="#contacts">Contacts</a>
+                    <a href="#download">Download</a>
+                </div>
+            </div>
+            <div class="logo-footer">
+                <img src="src/images/logo-clear.png" alt="logo" class="logo">
+            </div>
+        </div>
+        <div class="copy-right">
+            <p>© 2025, Movora</p>
+            <p>Movora produce, All Rights Reserved</p>
+        </div>
     </footer>
 </body>
 <script>
-    /* When the user clicks on the button, 
-    toggle between hiding and showing the dropdown content */
     function myFunction() {
         document.getElementById("myDropdown").classList.toggle("show");
     }
 
-    // Close the dropdown if the user clicks outside of it
     window.onclick = function (event) {
         if (!event.target.matches('.dropbtn')) {
             var dropdowns = document.getElementsByClassName("dropdown-content");
