--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movora</title>
+    <link rel="icon" href="src/images/logo-clear.png">
     <link rel="stylesheet" href="src/css/main.css">
 </head>
 
@@ -17,7 +18,7 @@
             <nav>
                 <div class="standart-nav"><a href="#main">Main</a></div>
                 <div class="standart-nav"><a href="#about">About</a></div>
-                <div class="standart-nav"><a href=" #howtouse">How to use</a></div>
+                <div class="standart-nav"><a href="#howtouse">How to use</a></div>
                 <div class="standart-nav"><a href="#contacts">Contacts</a></div>
                 <div class="standart-nav"><a href="#download" class="download-button">Download</a></div>
 
@@ -49,7 +50,7 @@
             <h1>Movora</h1>
             <h2>Best soft-ware for quick and easy movie sorting and accounting <br> for all kinds of rental businesses.
             </h2>
-            <button onclick="location.href='#text'">See more</button>
+            <button onclick="location.href='#about'">See more</button>
         </div>
     </div>
     <div class="bar" style="background-color: black; width: 100%; margin-bottom: 1.8em;"></div>
@@ -115,7 +116,7 @@
         </div>
     </div>
     <div class="bar" style="background-color: black; width: 100%; margin-bottom: 1.8em;"></div>
-    <div class="download-section">
+    <div id="download" class="download-section">
         <div class="download-content">
             <p class="download-text">Get the latest version of our software below:</p>
             <div class="button-group">
@@ -129,7 +130,7 @@
             </div>
         </div>
     </div>
-    <div class="how-to">
+    <div id="howtouse" class="how-to">
         <div class="how-to-main">
             <div class="how-to-text">
                 <h2>How to use Movora?</h2>
@@ -144,19 +145,18 @@
             </div>
         </div>
         <div class="video">
-            <iframe width="801" height="451" src="https://www.youtube.com/embed/etOq30rF0gE?si=ogd8_2kUn3QcGdeU"
+            <iframe src="https://www.youtube.com/embed/Ume2zEtkkj8?si=zonQ3S9HdAI_6l63"
                 title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pictur
-                e-in-picture; web-share"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
-    <footer>
+    <footer id="contacts">
         <div class="upper-footer">
             <div class="contacts-footer">
                 <h2>Contact us</h2>
                 <p>movora@gmail.com</p>
-                <p>www.movora.com/github.net</p>
+                <p>github.com/5o5age/Movora</p>
                 <p>+371 24 814 545</p>
                 <p>Latvia, Riga</p>
             </div>
@@ -197,7 +197,6 @@
         }
     }
 </script>
-
 
 <!--
                     __
