--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a href="#main">Main</a>
                         <a href="#about">About</a>
                         <a href="#howtouse">How to use</a>
-                        <a href="#contact">Contact</a>
+                        <a href="#contacts">Contact</a>
                         <a href="#download" class="download-button">Download</a>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
             <p class="download-text">Get the latest version of our software below:</p>
             <div class="button-group">
                 <a href="#" class="btn primary">Download</a>
-                <a href="#" class="btn secondary small">Download Manual</a>
+                <a href="src/files/MovoraHowToUse.pdf" class="btn secondary small" download="MovoraHowToUse.pdf">Download Manual</a>
             </div>
             <div class="photo-row">
                 <img src="src/images/Background.jpg" alt="Screenshot 1">
@@ -141,11 +141,11 @@
                     contact us!</p>
             </div>
             <div class="how-to-btn">
-                <a href="#" class="btn primary">Download Manual</a>
+                <a href="src/files/MovoraHowToUse.pdf" class="btn primary" download="MovoraHowToUse.pdf">Download Manual</a>
             </div>
         </div>
         <div class="video">
-            <iframe src="https://www.youtube.com/embed/J6ujTlepWo0?si=hgtQ00tUFo52VXvL"
+            <iframe src="https://www.youtube.com/embed/5G2LzyzOw7g?si=-BKaeypPpjAUo1Vs"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -164,7 +164,7 @@
                 <div>
                     <a href="#main">Main</a>
                     <a href="#about">About</a>
-                    <a href=" #howtouse">How to use</a>
+                    <a href="#howtouse">How to use</a>
                     <a href="#contacts">Contacts</a>
                     <a href="#download">Download</a>
                 </div>
