--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                 <a href="src/files/MovoraHowToUse.pdf" class="btn secondary small" download="MovoraHowToUse.pdf">Download Manual</a>
             </div>
             <div class="photo-row">
-                <img src="src/images/Background.jpg" alt="Screenshot 1">
-                <img src="src/images/Background.jpg" alt="Screenshot 2">
-                <img src="src/images/Background.jpg" alt="Screenshot 3">
+                <img src="src/images/shot1.png" alt="Screenshot 1">
+                <img src="src/images/shot2.png" alt="Screenshot 2">
+                <img src="src/images/shot3.png" alt="Screenshot 3">
             </div>
         </div>
     </div>
