Added posibility to download main program

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="download-content">
             <p class="download-text">Get the latest version of our software below:</p>
             <div class="button-group">
-                <a href="#" class="btn primary">Download</a>
+                <a href="src/files/Movora-main.zip" class="btn primary">Download</a>
                 <a href="src/files/MovoraHowToUse.pdf" class="btn secondary small" download="MovoraHowToUse.pdf">Download Manual</a>
             </div>
             <div class="photo-row">
