--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             movies with accuracy, saving you time and effort. No complicated setup—just a simple and
                             reliable way to keep everything in order.</p>
                     </div>
-                    <div><img class="poster" src="src/images/poster.jpg" alt="example"></div>
+                    <div><img class="poster" src="src/images/bluefast.jpg" alt="example"></div>
                 </div>
             </div>
             <div class="card-content">
@@ -91,7 +91,7 @@
                             your privacy while keeping everything organized and easy to manage. Sort with confidence,
                             knowing your data is safe.</p>
                     </div>
-                    <div><img src="src/images/poster.jpg" alt="example"></div>
+                    <div><img src="src/images/secure.jpg" alt="example"></div>
                 </div>
             </div>
             <div class="card-content last-card">
@@ -110,7 +110,7 @@
                             designed to be intuitive and hassle-free, so you can sort your collection in just a few
                             clicks.</p>
                     </div>
-                    <div><img src="src/images/poster.jpg" alt="example"></div>
+                    <div><img src="src/images/check.jpg" alt="example"></div>
                 </div>
             </div>
         </div>
